log
Thu 20 Apr 2023 04:27:59 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  2|8
total_score: 0/70
e296864
Thu 20 Apr 2023 04:28:33 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
d2cb729
Thu 20 Apr 2023 04:29:08 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
08128ca
Thu 20 Apr 2023 04:46:19 PM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  6|7
total_score: 5/70
4d468c4
Thu 20 Apr 2023 05:00:00 PM UTC: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  6|7
total_score: 5/70
56df4cf
Thu 20 Apr 2023 05:01:01 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
1dc1aff
Thu 20 Apr 2023 05:03:05 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
394afac
Thu 20 Apr 2023 05:06:42 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
6e89444
Thu 20 Apr 2023 05:07:13 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:87:18: error: format ‘%s’ expects argument of type ‘char *’, but argument 2 has type ‘int’ [-Werror=format=]
   87 |         printf("%s",tree->lower_than(aux->pair->key,key));
      |                 ~^  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                  |  |
      |                  |  int
      |                  char *
      |                 %d
treemap.c:89:7: error: ‘else’ without a previous ‘if’
   89 |       else
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
b1aa00f
Thu 20 Apr 2023 05:07:21 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:89:7: error: ‘else’ without a previous ‘if’
   89 |       else
      |       ^~~~
Compilation failed
1c8108c
Thu 20 Apr 2023 05:07:39 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|6
total_score: 15/70
dd2b749
Thu 20 Apr 2023 05:08:32 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
56f922a
Thu 20 Apr 2023 05:08:52 PM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  11|6
total_score: 15/70
5a63560
Thu 20 Apr 2023 05:39:48 PM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:58:34: error: expected ‘;’ before ‘}’ token
   58 |   aux = createTreeNode(key,value)
      |                                  ^
      |                                  ;
   59 | 
   60 | }
      | ~                                 
Compilation failed
c4353b6
Thu 20 Apr 2023 05:39:59 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
de6823c
Thu 20 Apr 2023 05:41:53 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  11|6
total_score: 15/70
30dbcb9
Thu 20 Apr 2023 05:48:24 PM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:68:23: error: ‘auxParent’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   68 |       auxParent->left = aux;
      |       ~~~~~~~~~~~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
6309f7a
Thu 20 Apr 2023 06:40:27 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|6
total_score: 15/70
8aed84a
Thu 20 Apr 2023 06:42:23 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:54:42: error: expected ‘)’ before ‘return’
   54 |     if(is_equal(tree, aux->pair->key, key
      |                ~                         ^
      |                                          )
   55 |       return;
      |       ~~~~~~                              
treemap.c:62:23: error: expected ‘)’ before ‘}’ token
   62 |       aux = aux->left;
      |                       ^
      |                       )
   63 |   }
      |   ~                    
treemap.c:54:7: note: to match this ‘(’
   54 |     if(is_equal(tree, aux->pair->key, key
      |       ^
treemap.c:63:3: error: expected expression before ‘}’ token
   63 |   }
      |   ^
Compilation failed
28b84c4
Thu 20 Apr 2023 06:42:50 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
b59c1ab
Thu 20 Apr 2023 06:44:21 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
c82fe0d
Thu 20 Apr 2023 06:48:57 PM UTC: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  12|6
total_score: 15/70
cfa3fe9
Thu 20 Apr 2023 06:49:58 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:16: error: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘void *’ [-Werror=format=]
   59 |       printf("%d %d\n",aux->pair->key, key);
      |               ~^       ~~~~~~~~~~~~~~
      |                |                |
      |                int              void *
      |               %p
treemap.c:59:19: error: format ‘%d’ expects argument of type ‘int’, but argument 3 has type ‘void *’ [-Werror=format=]
   59 |       printf("%d %d\n",aux->pair->key, key);
      |                  ~^                    ~~~
      |                   |                    |
      |                   int                  void *
      |                  %p
cc1: all warnings being treated as errors
Compilation failed
459595c
Thu 20 Apr 2023 06:50:14 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
f9b6f27
Thu 20 Apr 2023 06:50:50 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
6361746
Thu 20 Apr 2023 06:51:46 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:57:14: error: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘void **’ [-Werror=format=]
   57 |     printf("%d %d\n",&aux->pair->key, &key);
      |             ~^       ~~~~~~~~~~~~~~~
      |              |       |
      |              int     void **
treemap.c:57:17: error: format ‘%d’ expects argument of type ‘int’, but argument 3 has type ‘void **’ [-Werror=format=]
   57 |     printf("%d %d\n",&aux->pair->key, &key);
      |                ~^                     ~~~~
      |                 |                     |
      |                 int                   void **
cc1: all warnings being treated as errors
Compilation failed
8268a75
Thu 20 Apr 2023 06:52:01 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:57:22: error: dereferencing ‘void *’ pointer [-Werror]
   57 |     printf("%d %d\n",*aux->pair->key, *key);
      |                      ^~~~~~~~~~~~~~~
treemap.c:57:39: error: dereferencing ‘void *’ pointer [-Werror]
   57 |     printf("%d %d\n",*aux->pair->key, *key);
      |                                       ^~~~
treemap.c:57:22: error: invalid use of void expression
   57 |     printf("%d %d\n",*aux->pair->key, *key);
      |                      ^~~~~~~~~~~~~~~
treemap.c:57:39: error: invalid use of void expression
   57 |     printf("%d %d\n",*aux->pair->key, *key);
      |                                       ^~~~
cc1: all warnings being treated as errors
Compilation failed
43885c5
Thu 20 Apr 2023 06:52:16 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:57:28: error: invalid type argument of ‘->’ (have ‘TreeNode’)
   57 |     printf("%d %d\n",(*aux)->pair->key, (*key));
      |                            ^~
treemap.c:57:42: error: dereferencing ‘void *’ pointer [-Werror]
   57 |     printf("%d %d\n",(*aux)->pair->key, (*key));
      |                                          ^~~~
treemap.c:57:42: error: invalid use of void expression
   57 |     printf("%d %d\n",(*aux)->pair->key, (*key));
      |                                         ~^~~~~
cc1: all warnings being treated as errors
Compilation failed
a853ad6
Thu 20 Apr 2023 07:04:22 PM UTC: 
 treemap.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:67:21: error: ‘auxParent’ may be used uninitialized [-Werror=maybe-uninitialized]
   67 |     auxParent->left = aux;
      |     ~~~~~~~~~~~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
e1a3837
